# Atlantronic

./: .cproject  .gdbinit  .gitignore  .gitmodules  .project  ARD_eclipse_code_style.xml  Atlantronic_2200493a950af4cb69273a8c6115d529908a5899.xz  CMakeLists.txt  Makefile  ObstacleDetector__process__scan_0.json  README  autom_moumou_1337.patch  boot.sh  create_ard_package.sh  cycle_debug_1301.patch  diff  env.sh  jenkins.sh  nobuild_rmo.sh  qemu.sh  refacto_deployer.patch  screen.sh  stack.xml  start_standalone_qemu.sh  stm32_prog.txt  test_all.sh  test_romain_motionstate.patch  tests_smach_preempt_hierarchical_1400.patch  virtual_opponents_1407.patch
arp_core/: .cproject  .gitignore  .pydevproject  CMakeLists.txt  arp_core-gnulinux.pc  doc.sh  manifest.xml  orocos-arp_core.pc.in  rosconfig.cmake  run.sh  uTest.sh
arp_core/cmake/: ARP_common_functions.cmake  ARP_dependencies.cmake  ARP_project_names.cmake
arp_core/doc/: Doxyfile.sh
arp_core/msg/: ArmCommandMsg.msg  ArmStatusMsg.msg  Beep.msg  CannonState.msg  DynamixelState.msg  ICRSpeedMsg.msg  LocalizationState.msg  LocalizatorState.msg  MotionTarget.msg  Obstacle.msg  Odo.msg  OmniCommand.msg  OmniOdo.msg  OpponentsList.msg  Pose.msg  PowerStatusMsg.msg
arp_core/msg_gen/lisp/: DifferentialCommand.lisp  Obstacle.lisp  Odo.lisp  Pose.lisp  Start.lisp  StartColor.lisp  Velocity.lisp  _package.lisp  _package_DifferentialCommand.lisp  _package_Obstacle.lisp  _package_Odo.lisp  _package_Pose.lisp  _package_Start.lisp  _package_StartColor.lisp  _package_Velocity.lisp  arp_core-msg.asd
arp_core/script/: CMakeLists.txt
arp_core/script/deployment/: deploy_arp_core.ops
arp_core/script/linux/: ard_autostart  ard_autostart.sh  ard_boot_ro  clear_files.sh  deployment_deployed.sh  deployment_failed.sh  deployment_loading.sh  gen_doc_arp_core.sh  get_arp_state.sh  install_target_arp_core.sh  match_finished.sh  match_ready.sh  match_running.sh  run.sh
arp_core/src/: CMakeLists.txt  arp_core-types.hpp  version.h.in
arp_core/src/components/: CMakeLists.txt  Components.cpp  Monitor.cpp  Monitor.hpp  MotionScheduler.cpp  MotionScheduler.hpp  ParamsComponent.cpp  ParamsComponent.hpp  PeriodicClock.cpp  PeriodicClock.hpp  SimulatedPeriodicClock.cpp  SimulatedPeriodicClock.hpp  UbiquityParams.cpp  UbiquityParams.hpp
arp_core/src/exceptions/: NotImplementedException.hpp
arp_core/src/filters/: AntiBounceFilter.h  CMakeLists.txt  DisplacementDifferentiator.h  Extrapolator6D.h  HPButterworthFilter.h  LPButterworthFilter.h  RnHPButterworthFilter.h  RnLPButterworthFilter.h  RnLPButterworthFilter.hpp  RnRegressiveDerivator.h  RnSimpsonIntegrator.h  RnTrapezoidalIntegrator.h  TwistDerivativeSat.cpp  TwistDerivativeSat.hpp  TwistIntegrator.h
arp_core/src/helpers/: CMakeLists.txt  DynamicCalibTool.cpp  DynamicCalibTool.hpp  ICalibrationTool.hpp  SimpsonIntegrator.cpp  SimpsonIntegrator.hpp  StaticCalibTool.cpp  StaticCalibTool.hpp  simpson_integrator.c  simpson_integrator.h
arp_core/src/logger/: CMakeLists.txt  DefaultLogger.cpp  DefaultLogger.hpp  Logger.cpp  Logger.hpp  LoggerSystem.cpp  LoggerSystem.hpp
arp_core/src/math/: CMakeLists.txt  EstimatedICRSpeed.cpp  EstimatedICRSpeed.hpp  EstimatedPose2D.cpp  EstimatedPose2D.hpp  EstimatedTwist2D.cpp  EstimatedTwist2D.hpp  Geometry.hpp  ICR.cpp  ICR.hpp  ICRSpeed.cpp  ICRSpeed.hpp  Interpolator.cpp  Interpolator.hpp  MathFactory.cpp  MathFactory.hpp  Pose.cpp  Pose.hpp  Pose.hpp.no  Pose2D.cpp  Pose2D.hpp  Pose2DNorm.cpp  Pose2DNorm.hpp  Stats.cpp  Stats.hpp  Twist2.cpp  Twist2.cpp.no  Twist2.hpp  Twist2D.cpp  Twist2D.hpp  Twist2DNorm.cpp  Twist2DNorm.hpp  core  math.cpp  math.hpp
arp_core/src/models/: CMakeLists.txt  Logger.cpp  Logger.hpp  UbiquityDirectKinematics.cpp  UbiquityIndirectKinematics.cpp  UbiquityKinematics.cpp  UbiquityKinematics.hpp  UbiquityKinematicsTwist.cpp  UbiquityMotionState.cpp  UbiquityMotionState.hpp  UbiquityParams.cpp  UbiquityParams.hpp  UbiquityStates.hpp  core
arp_core/src/plugin/: CMakeLists.txt  FilteringService.cpp
arp_core/src/time/: ArdTime.cpp  (+4 more)
arp_core/srv/: SetColor.srv  Spawn.srv
arp_core/test/: ArpCoreMain.cpp  CMakeLists.txt  Sandbox.cpp  Sandbox.hpp  arp_core_main.c
arp_hml/src/: CMakeLists.txt  Hml.cpp  HmlItf.cpp  HmlItf.hpp  ProtokrotItf.cpp  ProtokrotItf.hpp  version.h.in
arp_hml/test/: ArpHMLMain.cpp  CMakeLists.txt  Sandbox.cpp  Sandbox.hpp  canspy.sh  rt_dev_send.c  test_watchdog.c
arp_master/: CMakeLists.txt  Makefile  manifest.xml  orocos-arp_master.pc.in  run.sh
arp_master/action/: Order.action
arp_master/cmake/: ARP_dependencies.cmake  ARP_project_names.cmake
arp_master/doc/: Doxyfile.sh
arp_master/msg/: DifferentialCommand.msg  Obstacle.msg  Odo.msg  Pose.msg  Start.msg
arp_master/script/: CMakeLists.txt
arp_master/src/: CMakeLists.txt  CircularTraj.cpp  CircularTraj.hpp  Command.cpp  Command.hpp  CommandNode.cpp  Geometry.hpp  GraphicsSimuFrame.cpp  GraphicsSimuFrame.hpp  GraphicsSimuNode.cpp  GraphicsSimuRobot.cpp  GraphicsSimuRobot.hpp  Localizator.cpp  Localizator.hpp  LocalizatorNode.cpp  MotionControl.cpp  MotionControl.hpp  MotionControlNode.cpp  PhysicsSimu.cpp  PhysicsSimu.hpp  PhysicsSimuNode.cpp  PhysicsSimuRobot.cpp  PhysicsSimuRobot.hpp  SimuFrame.cpp  SimuFrame.hpp  SimuNode.cpp  SimuRobot.cpp  SimuRobot.hpp  StratA.cpp  StratA.hpp  StratANode.cpp  TeleopNode.cpp  TinyStrat.cpp  TinyStrat.hpp  TinyStratNode.cpp  WayPoint.cpp  WayPoint.hpp  version.h.in
arp_ods/src/: CMakeLists.txt  Command.cpp  Command.hpp  CommandNode.cpp  Logitech3DTeleop.cpp  Logitech3DTeleop.hpp  MotionControl.cpp  MotionControl.hpp  MotionControlNode.cpp  Ods.cpp  OrderSelector.cpp  OrderSelector.hpp  TeleopNode.cpp  version.h.in
arp_rlu/src/: CMakeLists.txt  Localizator.cpp  Localizator.hpp  ObstacleDetector.cpp  ObstacleDetector.hpp  OldLocalizator.cpp  OldLocalizator.hpp  OldLocalizatorNode.cpp  version.h.in
arp_rlu/test/: CMakeLists.txt
arp_stm32/src/: CMakeLists.txt  version.h.in
default/: CMakeLists.txt
default/cmake/: ARP_dependencies.cmake
default/script/: CMakeLists.txt  gen_doc.sh  install_target.sh
(+5189 files in other folders)
