###################################################################################################################
#    EDIT BELOW THIS LINE AND UNTIL NEXT LINE FOR A NEW PROJECT

add_subdirectory(math)
add_subdirectory(helpers)
add_subdirectory(models)
add_subdirectory(tools)
#add_subdirectory(plugin)
#add_subdirectory(taskcontexts)

###################################################################################################################
