###################################################################################################################
#    EDIT BELOW THIS LINE AND UNTIL NEXT LINE FOR A NEW PROJECT

add_subdirectory(CornerDetector)
add_subdirectory(ReLocalizator)

###################################################################################################################