###################################################################################################################
#    EDIT BELOW THIS LINE AND UNTIL NEXT LINE FOR A NEW PROJECT

#add_subdirectory(lasertoolbox)
#add_subdirectory(CornerDetector)
#add_subdirectory(ReLocalizator)
#add_subdirectory(objectfinder)

add_subdirectory(KFL)
add_subdirectory(LSL)

###################################################################################################################