###################################################################################################################
#    EDIT BELOW THIS LINE AND UNTIL NEXT LINE FOR A NEW PROJECT

add_subdirectory( ops )
add_subdirectory( properties )

add_ARP_test_shared_library( arp-core-test *Test.cpp )

###################################################################################################################
