###################################################################################################################
#    EDIT BELOW THIS LINE AND UNTIL NEXT LINE FOR A NEW PROJECT

add_ARP_test_executable( uTest_Core_Plugin.ard *.cpp )
target_link_libraries( uTest_Core_Plugin.ard arp-core )

###################################################################################################################
