###################################################################################################################
#    EDIT BELOW THIS LINE AND UNTIL NEXT LINE FOR A NEW PROJECT

add_ARP_test_executable( uTest_Core_ARDTaskContext.ard uTest_ARDTaskContext.cpp )
target_link_libraries( uTest_Core_ARDTaskContext.ard arp-core )

###################################################################################################################
