###################################################################################################################
#    EDIT BELOW THIS LINE AND UNTIL NEXT LINE FOR A NEW PROJECT

add_subdirectory(can)
add_subdirectory(cpu)
add_subdirectory(io)
add_subdirectory(joystick)
add_subdirectory(motor)
add_subdirectory(platform)
add_subdirectory(taskcontexts)

###################################################################################################################

