###################################################################################################################
#    EDIT BELOW THIS LINE AND UNTIL NEXT LINE FOR A NEW PROJECT

add_subdirectory(can)
add_subdirectory(cpu)
#add_subdirectory(hokuyo)
add_subdirectory(io)
add_subdirectory(joystick)
add_subdirectory(mockups)
add_subdirectory(motor)
add_subdirectory(platform)
add_subdirectory(ros_itf)
add_subdirectory(taskcontexts)

###################################################################################################################

