### USER : add your Cmake stuff here

#rosbuild_add_executable(SimuNode SimuNode.cpp SimuFrame.cpp SimuRobot.cpp)
#rosbuild_link_boost(SimuNode thread)
#target_link_libraries(SimuNode ${wxWidgets_LIBRARIES})

#rosbuild_add_executable(PhysicsSimuNode PhysicsSimuNode.cpp PhysicsSimu.cpp PhysicsSimuRobot.cpp)

#
#
# !!!! Le simu est passé dans HML.
#
#